Upgrading clustermanager to use infinispan 6.0.2Final.
- Removed unnecessary BaseInterceptor clone which was needed for 5.3.0
version
- Bumped services_implementation implementation version to indicate
this is actually different.
- Modified the parent pom version so version propagate in other places

Signed-off-by: Ravikumar Chiguruvada <ravikumar.chiguruvada@ericsson.com>
Signed-off-by: Giovanni Meo <gmeo@cisco.com>
Change-Id: I062c72153a2ffe6949f3a3c8d2f0cdaa826bb65c

--- a/opendaylight/clustering/services_implementation/pom.xml
+++ b/opendaylight/clustering/services_implementation/pom.xml
@@ -15,7 +15,7 @@
   </scm>
 
   <artifactId>clustering.services-implementation</artifactId>
-  <version>0.4.2-SNAPSHOT</version>
+  <version>0.4.3-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <properties>
     <!-- Sonar properties using jacoco to retrieve integration test results -->
@@ -68,7 +68,7 @@
               *
             </DynamicImport-Package>
             <Embed-Dependency>
-              infinispan-core,jgroups,jboss-marshalling-river,jboss-marshalling,jboss-logging,staxmapper,narayana-jta;type=!pom;inline=false
+              infinispan-core,infinispan-commons,jgroups,jboss-marshalling-river,jboss-marshalling,jboss-logging,staxmapper,narayana-jta;type=!pom;inline=false
             </Embed-Dependency>
             <Embed-Transitive>
               true
@@ -116,7 +116,7 @@
                     <exclude>org.infinispan:infinispan-core:*</exclude>
                   </excludes>
                   <includes>
-                    <include>org.infinispan:infinispan-core:[5.3.0.Final]</include>
+                    <include>org.infinispan:infinispan-core:[6.0.2.Final]</include>
                   </includes>
                 </bannedDependencies>
               </rules>
@@ -131,7 +131,7 @@
     <dependency>
       <groupId>org.infinispan</groupId>
       <artifactId>infinispan-core</artifactId>
-      <version>5.3.0.Final</version>
+      <version>6.0.2.Final</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
