BUG-693 Config module for netconf client dispatcher.
netconf/
NetconfClientDispatcher and NetconfSSHClientDispatcher merged into NetconfClientDispatcherImpl.
Introduced NetconfClientConfiguration to contain all configuration attributes for netconf clients.
Introduced interface for NetconfClientDispatchers.
Removed NetconfITSecureTest since it did not test secure connection.

config/
Added netconf-config-api maven module, which contains service definition of client-dispatcher.
Added netconf-config-dispatcher maven module, which contains config module for client-dispatcher.

md-sal/
Updated configuration for sal-netconf-connector with client dispatcher dependency (backwards compatibility preserved).

Change-Id: I05e784af6a9b8e11fad21d3bad0311c110754d31
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -1374,6 +1374,18 @@
           <version>${config.version}</version>
         </dependency>
 
+        <!--Netconf config-->
+        <dependency>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>netconf-config-api</artifactId>
+          <version>${netconf.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>netconf-config-dispatcher</artifactId>
+          <version>${netconf.version}</version>
+        </dependency>
+
        <!-- Netconf -->
         <dependency>
           <groupId>org.opendaylight.controller</groupId>
