--- a/opendaylight/netconf/netconf-client/pom.xml
+++ b/opendaylight/netconf/netconf-client/pom.xml
@@ -43,6 +43,7 @@
                     <instructions>
                         <Export-Package>
                             org.opendaylight.controller.netconf.client,
+                            org.opendaylight.controller.netconf.client.conf,
                         </Export-Package>
                         <Import-Package>
                             com.google.common.base,
