--- a/opendaylight/md-sal/sal-netconf-connector/pom.xml
+++ b/opendaylight/md-sal/sal-netconf-connector/pom.xml
@@ -46,6 +46,10 @@
             <artifactId>yang-parser-impl</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>netconf-config-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>sal-broker-impl</artifactId>
             <scope>test</scope>
