Fix 664 Update security.xml in web bundle
Update security.xml in web bundle to point to correct img directory

Change-Id: I4cd8dda2641bed3e284f3dc5039490e378042c66
Signed-off-by: Andrew Kim <andrekim@cisco.com>

--- a/opendaylight/web/root/src/main/resources/WEB-INF/web.xml
+++ b/opendaylight/web/root/src/main/resources/WEB-INF/web.xml
@@ -43,7 +43,7 @@
           <web-resource-collection>
              <web-resource-name>free access</web-resource-name>
              <url-pattern>/js/*</url-pattern>
-             <url-pattern>/images/*</url-pattern>
+             <url-pattern>/img/*</url-pattern>
              <url-pattern>/css/*</url-pattern>
              <url-pattern>/favicon.ico</url-pattern>
              <url-pattern>/versionProperty/*</url-pattern>
