-Fixed configuration.version that is causing verify job to fail
DO NOT MERGE -
Maven build plugin in northbound.client looks for full-json-client artifact
that it does not produce. This fails the build. I have commented out json-client artifacts
from configuration.

Change-Id: I0e00d6e3a82790a2e7b0f5c9db3f8d4f1e24f7dd
Signed-off-by: Abhishek Kumar <abhishk2@cisco.com>
Signed-off-by: Surekha Bejgam <sbejgam@cisco.com>

--- a/opendaylight/configuration/implementation/pom.xml
+++ b/opendaylight/configuration/implementation/pom.xml
@@ -55,6 +55,7 @@
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>configuration</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
