--- a/opendaylight/topologymanager/implementation/pom.xml
+++ b/opendaylight/topologymanager/implementation/pom.xml
@@ -59,6 +59,11 @@
   <dependencies>
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
+      <artifactId>configuration</artifactId>
+      <version>${configuration.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
       <artifactId>sal</artifactId>
     </dependency>
     <dependency>
