--- a/opendaylight/forwarding/staticrouting/pom.xml
+++ b/opendaylight/forwarding/staticrouting/pom.xml
@@ -66,6 +66,7 @@
   <dependency>
    <groupId>org.opendaylight.controller</groupId>
    <artifactId>configuration</artifactId>
+   <version>${configuration.version}</version>
   </dependency>
   <dependency>
    <groupId>junit</groupId>
