--- a/opendaylight/forwardingrulesmanager/api/pom.xml
+++ b/opendaylight/forwardingrulesmanager/api/pom.xml
@@ -65,6 +65,7 @@
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>configuration</artifactId>
+      <version>${configuration.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
