--- a/opendaylight/switchmanager/implementation/pom.xml
+++ b/opendaylight/switchmanager/implementation/pom.xml
@@ -97,6 +97,7 @@
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>configuration</artifactId>
+      <version>${configuration.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
