--- a/opendaylight/northbound/java-client/pom.xml
+++ b/opendaylight/northbound/java-client/pom.xml
@@ -148,7 +148,7 @@
                   <type>jar</type>
                   <classifier>full-java-client-sources</classifier>
                 </artifact>
-                <artifact>
+                <!--artifact>
                   <file>${json-client}</file>
                   <type>jar</type>
                   <classifier>full-json-client</classifier>
@@ -157,7 +157,7 @@
                   <file>${json-client-sources}</file>
                   <type>jar</type>
                   <classifier>full-json-client-sources</classifier>
-                </artifact>
+                </artifact-->
               </artifacts>
             </configuration>
           </execution>
