Resolve Bug:713 - Open snapshot only once per session.
Rework NetconfOperationServiceSnapshot lifecycle: Open it when
session negotiator is requested, thus at entry point where both
hello message and session listener is created. Close the snapshot
when NetconfSessionListener receives down/terminated event.

Change-Id: Id491110524ab635e552a49f48e4938dd7113d8bf
Signed-off-by: Tomas Olvecky <tolvecky@cisco.com>

--- a/opendaylight/netconf/netconf-it/pom.xml
+++ b/opendaylight/netconf/netconf-it/pom.xml
@@ -61,6 +61,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>netconf-impl</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>netconf-monitoring</artifactId>
             <scope>test</scope>
         </dependency>
