Bug 491 - Use XmlUnit for xml comparing in junit tests.
-comparing XMLs as DOM Documents with XmlUnit
-added XmlUnit util class - contains common assertion tests

Change-Id: I505c7896e7243873b45c93ea3bf59c941a68924e
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/opendaylight/config/config-persister-directory-xml-adapter/pom.xml
+++ b/opendaylight/config/config-persister-directory-xml-adapter/pom.xml
@@ -59,6 +59,10 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>xmlunit</groupId>
+            <artifactId>xmlunit</artifactId>
+        </dependency>
 
     </dependencies>
 
