--- a/opendaylight/netconf/netconf-it/pom.xml
+++ b/opendaylight/netconf/netconf-it/pom.xml
@@ -114,6 +114,10 @@
           <groupId>org.opendaylight.controller</groupId>
           <artifactId>commons.logback_settings</artifactId>
         </dependency>
+        <dependency>
+          <groupId>xmlunit</groupId>
+          <artifactId>xmlunit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
