--- a/opendaylight/netconf/netconf-util/pom.xml
+++ b/opendaylight/netconf/netconf-util/pom.xml
@@ -50,6 +50,10 @@
             <groupId>org.opendaylight.controller.thirdparty</groupId>
             <artifactId>ganymed</artifactId>
         </dependency>
+        <dependency>
+            <groupId>xmlunit</groupId>
+            <artifactId>xmlunit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
