--- a/opendaylight/md-sal/sal-ispn-datastore/pom.xml
+++ b/opendaylight/md-sal/sal-ispn-datastore/pom.xml
@@ -85,6 +85,12 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+      <dependency>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>sal-broker-impl</artifactId>
+          <version>1.1-SNAPSHOT</version>
+      </dependency>
+
 
   </dependencies>
 
